--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -40,3 +40,19 @@
 .completed {
   text-decoration: line-through;
 }
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+#newTodo {
+  display: flex;
+  flex-direction: column;
+}
+
+#newTodo button {
+  margin-top: 1rem;
+}
